--- a/package.json
+++ b/package.json
@@ -1,27 +1,25 @@
 {
   "name": "quotes-api",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
   "scripts": {
-      "build": "tsc",
-      "start": "ts-node src/index.ts",
-      "dev": "ts-node-dev --respawn --transpile-only src/index.ts",    
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "node --env-file='.env' --watch --import=tsx src/index.ts",
+    "build": "tsc",
+    "start": "node dist/index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.20.2",
-    "express": "^4.19.2",
-    "monarch-orm": "^0.1.0"
+    "@hono/node-server": "^1.12.0",
+    "@hono/zod-validator": "^0.2.2",
+    "hono": "^4.5.1",
+    "monarch-orm": "^0.1.0",
+    "serverstruct": "^0.2.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@types/express": "^4.17.21",
     "@types/node": "^20.14.11",
-    "ts-node": "^10.9.2",
-    "ts-node-dev": "^2.0.0",
+    "tsx": "^4.16.2",
     "typescript": "^5.5.3"
   }
 }
