--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "dev": "node --env-file='.env' --watch --import=tsx src/index.ts",
     "build": "tsc",
-    "start": "node dist/index.js"
+    "start": "node --env-file='.env' dist/index.js"
   },
   "keywords": [],
   "author": "",
