--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "scripts": {
     "dev": "node --env-file='.env' --watch --import=tsx src/index.ts",
+    "dev:client": "node --env-file='.env' --import=tsx client.ts",
     "build": "tsc",
     "start": "node --env-file='.env' dist/index.js"
   },
@@ -10,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@anilseervi/inspirational-quotes": "^1.0.2",
     "@hono/node-server": "^1.12.0",
     "@hono/zod-validator": "^0.2.2",
     "hono": "^4.5.1",
